--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,6 +2,7 @@
   "name": "__MSG_JIRAEdges__",
   "version": "0.0.4",
   "author": "Chris Bandy",
+  "homepage_url": "https://github.com/cbandy/JIRA-Edges",
   "description": "__MSG_JIRAEdgesDescription__",
 
   "content_scripts": [
