Move avatar styling into a file

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,6 +8,7 @@
   "content_scripts": [
     {
       "matches": ["https://*.jira.com/*/RapidBoard.*"],
+      "css": ["rapidboard.css"],
       "js": ["vendor/mustache-0.8.1.js", "common.js", "rapidboard.js"]
     }
   ],
